# llm-cli-gateway

./: .bestpractices.json  .cursorrules  .eslintrc.json  .gitignore  .gitleaks.toml  .mcp.json  .prettierrc  BEST_PRACTICES.md  CHANGELOG.md  CLAUDE.md  CODE_REVIEWS_COMPARISON.md  CODE_REVIEW_CLAUDE.md  CODE_REVIEW_GEMINI.md  COMPRESSION_VALIDATION.md  CONTRIBUTING.md  CRITICAL_FIXES_APPLIED.md  CROSS_TOOL_REVIEW.md  CROSS_TOOL_SUCCESS.md  DOGFOODING_LESSONS.md  DOGFOODING_SUCCESS.md  Dockerfile.personal  ENFORCEMENT.md  LICENSE  METRICS_CROSS_TOOL_WORKFLOW.md  POSTGRESQL_IMPLEMENTATION_SUMMARY.md  POSTGRESQL_TESTS_COMPLETE.md  PRODUCTION_READY_SUMMARY.md  PRODUCT_REVIEWS.md  PROMPT_OPTIMIZATION_EXAMPLES.md  README.md  SECOND_REVIEW_FINDINGS.md  SECURITY.md  STEP2_FAILURE_MATRIX.md  TESTING_GUIDE.md  TESTING_SUMMARY.md  TOKEN_OPTIMIZATION_GUIDE.md  _typos.toml  docker-compose.personal.yml  docker-compose.test.yml  eslint.config.js  (+12 more)
.claude-plugin/: marketplace.json  plugin.json
.github/: CODEOWNERS  actionlint.yaml  dependabot.yml
commands/: claude-request.md  codex-request.md  gemini-request.md  session-manage.md
docker/: Dockerfile.personal  personal.compose.yml
docs/: acp-contract.md  acp-scope.md  agent-assurance-runtime-conformance.md  least-cost-routing-contract.md
installer/: README.md  build-release.sh  go.mod  main.go  main_test.go
integrations/llm-plugin/: .bandit  README.md  pyproject.toml
integrations/llm-plugin/llm_gateway/: __init__.py  gateway_resolver.py  mcp_client.py  models.py  options.py
integrations/llm-plugin/llm_gateway.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
integrations/llm-plugin/tests/: conftest.py  test_gateway_resolver.py  test_integration.py  test_mcp_client.py  test_models.py  test_options.py
migrations/: 001_initial_schema.sql  002_session_ids_as_text.sql  003_provider_type_sessions.sql  004_session_owner_principal.sql  005_provider_type_open_api_names.sql  006_personal_config_kit_sessions.sql  007_personal_config_kit_job_finalization.sql  008_postgres_job_store_schema.sql  009_personal_config_kit_session_cleanup.sql  010_personal_config_kit_attempt_fences.sql  011_personal_config_kit_output_privacy.sql  012_async_job_response_compression.sql  (+9 more)
site/: 404.html  (+22 more)
(+723 files in other folders)
